<resources>
    <string name="action_title">Guide</string>
    <string name="action_bar_install">Install</string>
    <string name="action_bar_share">Share</string>
    <string name="action_bar_rate">Rate</string>
    <string name="action_bar_help">Help</string>


    <string name="appDbName">appDbName</string>
    <string name="facebookPageName">BestModsandMapsforMinecraftMCPE</string>
    <string name="vkPageName">BestModsandMapsforMinecraftMCPE</string>

    <string name="app_name">App name</string>
    <string name="title">Title</string>

    <string name="mod_file">null</string>
    <string name="mod_file2">null</string>
    <string name="texture_pack_file">null</string>
    <string name="texture_pack_file2">null</string>
    <string name="additional_file">null</string>
    <string name="apk_file">null</string>
    <item name="isMap" type="bool">false</item>

    <string name="blocklauncher_failed">Error!</string>
    <string name="title_activity_dialog">DialogActivity</string>

    <string name="success_dialog_button">return to menu</string>
    <string name="success_dialog">Thank you for downloading this app. Keep it on your phone to receive latest UPDATES! Return to the Main Menu to learn additional information about this mod!</string>
    <string name="btnInstall">INSTALL</string>
    <string name="tvLoading">Loading...</string>
    <string name="tvDownloading">Downloading...</string>
    <string name="tvSpinnerChoose">Choose Version</string>
    <string name="tvSpinnerWait">Wait for installation</string>
    <string name="tvRateTitle">Where to rate this app</string>
    <string name="tvRateText">Rate us and leave five stars on the store!</string>
    <string name="tvRateAction">Rate on Google Play</string>
    <string name="tvBestTitle">Best mods and maps collection</string>
    <string name="tvBestText">Check out the collection of best mods and maps for MCPE from out team!</string>
    <string name="tvBestAction">Check on Play Store</string>
    <string name="tvHowToTitle">What you need to use this mods</string>
    <string name="tvHowToText">You need two apps: Minecraft Pocket Edition (the full version, the demo version doesn\'t work with mods) and BlockLauncher (the free version or the pro version).</string>
    <string name="tvHowToAction1">Get it on the Play Store</string>
    <string name="tvHowToAction2">Get it on the Play Store</string>
    <string name="tvSuggestTitle">Join the community</string>
    <string name="tvSuggestText">Reviews to current mods, videos, new updates - all this you will find on our pages on social networks!</string>
    <string name="tvSuggestAction">Join us on Facebook</string>
    <string name="tvSuggestAction2">Join us on VK</string>
    <string name="tvReportTitle">Where to report a bug</string>
    <string name="tvReportText">If you found any bug, send us a message with description and we will fix it as soon as possible.</string>
    <string name="tvReportAction">Send a message</string>
    <string name="btnStop">stop</string>
    <string name="btnInstalled">Installed</string>
    <string name="btnReInstall">Re-Install</string>



    <string name="exitText">Are you sure you want to exit?</string>
    <string name="exitQuestion">Exit?</string>
    <string name="answerYes">Yes</string>
    <string name="answerNo">No</string>
    <string name="updateMessage">New Update is Available. Check it NOW!</string>
    <string name="updateTitle">Notification!</string>
    <string name="answerInstallNow">INSTALL NOW</string>
    <string name="answerLater">Later</string>

    <string name="sharePickApp">Select app to share</string>
    <string name="shareMessage">" NOW ON GOOGLE PLAY "</string>
    <string name="sendEmailMessage">Send email to Developer</string>
    <string name="showPermissionMessage">To use this mod you have to grant the permission to install it on your external storage!</string>
    <string name="notificationMessage">Notification</string>
    <string name="answerOk">Ok</string>
    <string name="offerMessage1">"Thank you for downloading "</string>
    <string name="offerMessage2">YOU NEED BLOCKLAUNCHER TO INSTALL THIS!</string>
    <string name="offerMessage3">Install it and retry!</string>
    <string name="offerTitle">Download</string>
    <string name="answerCancel">Cancel!</string>
    <string name="noVersionSelectedMessage">No version selected</string>
    <string name="networkReq">Enable Network connection</string>

    <string name="tvDownload">" Download"</string>
    <string name="tvDownloadInProgress">Download in progress</string>
    <string name="tvDownloadCanceled">Download canceled</string>
    <string name="tvDownloadComplete">Download complete</string>
    <string name="tvCheckGuide">Check Guide</string>
    <string name="tvSuggestion">WARNING: Keep this application to receive latest updates to this mod!</string>
    <string name="tvSuggestion2">Check HELP for more info!</string>
    <string name="tvHowToDeleteTitle">How to Delete</string>
    <string name="tvHowToDeleteText">To delete this mod you need to use BlockLauncher. Deleting this application would not delete this mod, so keep it to receive latest updates!</string>

    <string name="askForHelpText">Do you want to check how to use this mod?</string>
    <string name="help2_title">How to apply the resource pack and/or behavior pack example:</string>
    <string name="help2_1">1. Start Minecraft Pocket Edition.</string>
    <string name="help2_2">2. Create a new world or edit an existing world. In this case, we’ll create a new world.</string>
    <string name="help2_3">3. Select all the game options you want and then scroll down in the left sidebar and tap on Resource Packs and apply your Add-on.</string>
    <string name="help2_4">4. Then tap on Behavior Packs in the sidebar and apply your Add-on there as well.</string>
    <string name="help2_5">5. Open the world. The add-on features obviously depends on which you installed but in this case it added a few different chairs to the game.</string>

    <string name="errorMessage">Sorry, something went wrong. Try again. If this wont help, try to install another version of this mod.</string>
    <string name="errorTitle">Error</string>


</resources>
